--- a/ConfigurationWebApiService.csproj
+++ b/ConfigurationWebApiService.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
+    <PackageReference Include="Xunit.Microsoft.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
